--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
 		"react-dom": "18.2.0"
 	},
 	"devDependencies": {
+		"@types/jest": "^28.1.7",
 		"@types/node": "18.7.6",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
 		"eslint": "8.22.0",
 		"eslint-config-next": "12.2.5",
 		"prisma": "^4.2.1",
+		"ts-jest": "^28.0.8",
 		"typescript": "4.7.4"
 	}
 }
