--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.2.1",
+		"concurrently": "^7.3.0",
 		"next": "12.2.5",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"swr": "^1.3.0"
 	},
 	"devDependencies": {
 		"@types/jest": "^28.1.7",
 		"@types/node": "18.7.6",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
+		"autoprefixer": "^10.4.8",
 		"eslint": "8.22.0",
 		"eslint-config-next": "12.2.5",
+		"postcss": "^8.4.16",
 		"prisma": "^4.2.1",
+		"tailwindcss": "^3.1.8",
 		"ts-jest": "^28.0.8",
 		"typescript": "4.7.4"
 	}
