--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"next": "12.2.5",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"superjson": "^1.9.1",
 		"swr": "^1.3.0"
 	},
 	"devDependencies": {
