--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 	"dependencies": {
 		"@prisma/client": "^4.2.1",
 		"concurrently": "^7.3.0",
+		"daisyui": "^2.24.0",
 		"next": "12.2.5",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
-		"superjson": "^1.9.1",
-		"swr": "^1.3.0"
+		"swr": "^1.3.0",
+		"theme-change": "^2.2.0"
 	},
 	"devDependencies": {
 		"@types/jest": "^28.1.7",
