--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "dotenv -e .env.development next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
@@ -12,6 +12,7 @@
 		"@prisma/client": "^4.3.1",
 		"concurrently": "^7.3.0",
 		"daisyui": "^2.24.0",
+		"dotenv": "^16.0.2",
 		"next": "12.2.5",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
