--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "dotenv -e .env.development next dev",
+		"dev": "dotenv -e .env.local next dev",
+		"migrate:local": "dotenv -e .env.local prisma migrate dev",
+		"migrate:dev": "dotenv -e .env.development prisma migrate deploy",
+		"migrate:deploy": "dotenv -e .env.production prisma db push",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.3.1",
+		"babel-plugin-superjson-next": "^0.4.4",
 		"concurrently": "^7.3.0",
 		"daisyui": "^2.24.0",
 		"dotenv": "^16.0.2",
 		"next": "12.2.5",
+		"next-superjson-plugin": "^0.4.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.4.0",
+		"superjson": "^1.9.1",
 		"swr": "^1.3.0",
 		"theme-change": "^2.2.0"
 	},
