--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
 		"migrate:deploy": "dotenv -e .env.production prisma db push",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "jest --watch",
+		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.3.1",
+		"babel-jest": "^29.0.3",
 		"babel-plugin-superjson-next": "^0.4.4",
 		"concurrently": "^7.3.0",
 		"daisyui": "^2.24.0",
 		"dotenv": "^16.0.2",
-		"next": "12.2.5",
+		"identity-obj-proxy": "^3.0.0",
+		"next": "^12.3.0",
 		"next-superjson-plugin": "^0.4.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -27,6 +31,8 @@
 		"theme-change": "^2.2.0"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
 		"@types/jest": "^28.1.7",
 		"@types/node": "18.7.6",
 		"@types/react": "18.0.17",
@@ -34,6 +40,8 @@
 		"autoprefixer": "^10.4.8",
 		"eslint": "8.22.0",
 		"eslint-config-next": "12.2.5",
+		"jest": "^29.0.3",
+		"jest-environment-jsdom": "^29.0.3",
 		"postcss": "^8.4.16",
 		"prisma": "^4.3.1",
 		"tailwindcss": "^3.1.8",
