--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.3.1",
+		"@types/react-instantsearch-dom": "^6.12.3",
 		"babel-jest": "^29.0.3",
 		"babel-plugin-superjson-next": "^0.4.4",
 		"concurrently": "^7.3.0",
@@ -44,6 +45,7 @@
 		"jest-environment-jsdom": "^29.0.3",
 		"postcss": "^8.4.16",
 		"prisma": "^4.3.1",
+		"react-instantsearch-dom": "^6.36.0",
 		"tailwindcss": "^3.1.8",
 		"ts-jest": "^28.0.8",
 		"typescript": "4.7.4"
