--- a/package.json
+++ b/package.json
@@ -1,53 +1,38 @@
 {
 	"name": "tracker-db",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"private": true,
 	"scripts": {
 		"dev": "dotenv -e .env.local next dev",
 		"migrate:local": "dotenv -e .env.local prisma migrate dev",
-		"migrate:dev": "dotenv -e .env.development prisma migrate deploy",
-		"migrate:deploy": "dotenv -e .env.production prisma db push",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
-		"test": "jest --watch",
-		"test:coverage": "jest --coverage"
+		"lint": "next lint"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.3.1",
-		"@types/react-instantsearch-dom": "^6.12.3",
-		"babel-jest": "^29.0.3",
 		"babel-plugin-superjson-next": "^0.4.4",
-		"concurrently": "^7.3.0",
 		"daisyui": "^2.24.0",
 		"dotenv": "^16.0.2",
-		"identity-obj-proxy": "^3.0.0",
 		"next": "^12.3.0",
-		"next-superjson-plugin": "^0.4.1",
+		"next-superjson-plugin": "^0.4.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-icons": "^4.4.0",
-		"superjson": "^1.9.1",
+		"superjson": "^1.10.1",
 		"swr": "^1.3.0",
 		"theme-change": "^2.2.0"
 	},
 	"devDependencies": {
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
-		"@types/jest": "^28.1.7",
 		"@types/node": "18.7.6",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
 		"autoprefixer": "^10.4.8",
 		"eslint": "8.22.0",
 		"eslint-config-next": "12.2.5",
-		"jest": "^29.0.3",
-		"jest-environment-jsdom": "^29.0.3",
 		"postcss": "^8.4.16",
 		"prisma": "^4.3.1",
-		"react-instantsearch-dom": "^6.36.0",
 		"tailwindcss": "^3.1.8",
-		"ts-jest": "^28.0.8",
 		"typescript": "4.7.4"
 	}
 }
