--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 	"dependencies": {
 		"@prisma/client": "^4.3.1",
 		"babel-plugin-superjson-next": "^0.4.4",
-		"daisyui": "^2.24.0",
 		"dotenv": "^16.0.2",
 		"next": "^12.3.0",
 		"next-superjson-plugin": "^0.4.4",
@@ -20,8 +19,7 @@
 		"react-dom": "18.2.0",
 		"react-icons": "^4.4.0",
 		"superjson": "^1.10.1",
-		"swr": "^1.3.0",
-		"theme-change": "^2.2.0"
+		"swr": "^1.3.0"
 	},
 	"devDependencies": {
 		"@types/node": "18.7.6",
