--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"migrate:local": "dotenv -e .env.local prisma migrate dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "jest --watch"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.3.1",
@@ -22,12 +23,16 @@
 		"swr": "^1.3.0"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.4.0",
 		"@types/node": "18.7.6",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
 		"autoprefixer": "^10.4.8",
 		"eslint": "8.22.0",
 		"eslint-config-next": "12.2.5",
+		"jest": "^29.2.1",
+		"jest-environment-jsdom": "^29.2.1",
 		"postcss": "^8.4.16",
 		"prisma": "^4.3.1",
 		"tailwindcss": "^3.1.8",
