--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"swr": "^1.3.0"
 	},
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.3",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@types/node": "18.7.6",
