--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,13 @@ services:
       - '3306:3306'
     volumes:
       - ./.mysql/datadir:/var/lib/mysql:cached
+  nextjs:
+    build: .
+    image: nextjs-prisma
+    restart: always
+    ports:
+      - '3000:3000'
+    volumes:
+      - .:/app
+    depends_on:
+      - db
