--- a/package.json
+++ b/package.json
@@ -1,39 +1,34 @@
 {
 	"name": "tracker-db",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"private": true,
 	"scripts": {
-		"dev": "dotenv -e .env.local next dev",
-		"migrate:local": "dotenv -e .env.local prisma migrate dev",
+		"dev": "next dev",
+		"migrate": "prisma migrate dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint",
-		"test": "jest --watch"
+		"lint": "next lint"
 	},
 	"dependencies": {
 		"@prisma/client": "^4.3.1",
 		"babel-plugin-superjson-next": "^0.4.4",
 		"dotenv": "^16.0.2",
-		"next": "^12.3.0",
+		"next": "^13.0.4",
 		"next-superjson-plugin": "^0.4.4",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
 		"superjson": "^1.10.1",
 		"swr": "^1.3.0"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.3",
-		"@testing-library/jest-dom": "^5.16.5",
-		"@testing-library/react": "^13.4.0",
 		"@types/node": "18.7.6",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
 		"autoprefixer": "^10.4.8",
 		"eslint": "8.22.0",
-		"eslint-config-next": "12.2.5",
-		"jest": "^29.2.1",
-		"jest-environment-jsdom": "^29.2.1",
+		"eslint-config-next": "^13.0.4",
 		"postcss": "^8.4.16",
 		"prisma": "^4.3.1",
 		"tailwindcss": "^3.1.8",
