--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"next-superjson-plugin": "^0.4.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.39.5",
 		"react-icons": "^4.4.0",
 		"superjson": "^1.10.1",
 		"swr": "^1.3.0"
