--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.6.1",
+		"@tanstack/react-table": "^8.7.0",
 		"babel-plugin-superjson-next": "^0.4.4",
 		"dotenv": "^16.0.2",
 		"next": "^13.0.4",
 		"next-superjson-plugin": "^0.4.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-hook-form": "^7.39.5",
 		"react-icons": "^4.4.0",
 		"superjson": "^1.10.1",
 		"swr": "^1.3.0"
