--- a/package.json
+++ b/package.json
@@ -10,20 +10,26 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@faker-js/faker": "^7.6.0",
 		"@prisma/client": "^4.6.1",
 		"@tanstack/react-table": "^8.7.0",
 		"babel-plugin-superjson-next": "^0.4.4",
+		"chart.js": "^4.0.1",
+		"d3": "^7.6.1",
 		"dotenv": "^16.0.2",
 		"next": "^13.0.4",
 		"next-superjson-plugin": "^0.4.4",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.0.1",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.4.0",
+		"react-select": "^5.6.1",
 		"superjson": "^1.10.1",
 		"swr": "^1.3.0"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.3",
+		"@types/d3": "^7.4.0",
 		"@types/node": "18.7.6",
 		"@types/react": "18.0.17",
 		"@types/react-dom": "18.0.6",
